# smoothiebot_ws

./: gitman.yml  import_fruit.sh  install-dependencies.sh  readme.md  video_for_peter.ogv
devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
devel/lib/: libchomp_motion_planner.so.0.9.11  libchomp_planner_plugin.so.0.9.11  libcollision_detector_hybrid_plugin.so.0.9.11  libmoveit_background_processing.so.0.9.11  libmoveit_cached_ik_kinematics_base.so.0.9.11  libmoveit_cached_ik_kinematics_plugin.so.0.9.11  libmoveit_collision_detection.so.0.9.11  libmoveit_collision_detection_fcl.so.0.9.11  libmoveit_collision_distance_field.so.0.9.11  libmoveit_collision_plugin_loader.so.0.9.11  libmoveit_common_planning_interface_objects.so.0.9.11  libmoveit_constraint_sampler_manager_loader.so.0.9.11  libmoveit_constraint_samplers.so.0.9.11  libmoveit_controller_manager_example.so.0.9.11  libmoveit_default_planning_request_adapter_plugins.so.0.9.11  libmoveit_distance_field.so.0.9.11  libmoveit_dynamics_solver.so.0.9.11  libmoveit_exceptions.so.0.9.11  libmoveit_fake_controller_manager.so.0.9.11  libmoveit_kdl_kinematics_plugin.so.0.9.11  libmoveit_kinematic_constraints.so.0.9.11  libmoveit_kinematics_base.so.0.9.11  libmoveit_kinematics_metrics.so.0.9.11  libmoveit_kinematics_plugin_loader.so.0.9.11  libmoveit_lazy_free_space_updater.so.0.9.11  libmoveit_lma_kinematics_plugin.so.0.9.11  libmoveit_motion_planning_rviz_plugin.so.0.9.11  libmoveit_motion_planning_rviz_plugin_core.so.0.9.11  (+47 more)
src/alexa/: README.md
src/launcher/: CMakeLists.txt  config.rviz  package.xml
src/launcher/configs/: config.rviz  smoothie.workspace.yaml
src/launcher/launch/: demo.launch  everything.launch  everything2.launch  moveit.launch  parameter_setting.launch  simulation.launch
src/launcher/maps/: four_bricks_map.pgm  four_bricks_map.yaml  simple_map.pgm  simple_map.yaml
src/launcher/worlds/: coke_world.world  world_of_fruit.world  world_of_fruit_2.world
src/launcher/worlds/FruitDae/: Orange.dae  apple.dae  banana.dae
src/launcher/worlds/apple/: model.sdf
src/smoothiebot/: CMakeLists.txt  __init__.py  package.xml
src/smoothiebot/launch/: everything.launch
src/smoothiebot/scripts/: add_random_fruits.py  attempt_grasp.py  fetch_demo.py  gripper.py  hard_code_sequence.py  menus2.py  move_robot.py  pick_place_test.py  rotate_robot.py  twister.py  world_transform.py  zero_robot.py
(+1255 files in other folders)
