<?xml version="1.0"?>
<package>
    <name>launcher</name>
    <version>0.0.0</version>
    <description>The launcher package</description>

    <maintainer email="aryeh@todo.todo">aryeh</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <export>
        <gazebo_ros
            gazebo_resource__path="${prefix}:/../../models"/>
    </export>

</package>
